# AVA

./: .gitignore  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  assess.py  pyproject.toml  requirements.txt  scope.yaml.example
.claude/skills/ava/: SKILL.md
ava/: __init__.py  finding_factory.py  findings_catalog.py  orchestrator.py
ava/active/: checks_access.py  checks_cors.py  checks_dom.py  checks_injection.py  checks_redirect_ssrf.py  checks_sqli.py  checks_xss.py  injector.py  payloads.py  runner.py  util.py
ava/core/: concurrency.py  http_client.py  logging.py  models.py  ratelimit.py
ava/crawler/: dom_crawler.py  fingerprint.py  static_crawler.py
ava/intake/: authorization.py  config.py  scope.py
ava/passive/: checks.py  disclosure.py  runner.py  tls.py
ava/reporting/: findings_store.py  render.py
ava/triage/: severity.py  triage.py
tests/: conftest.py  helpers.py  test_active_checks.py  test_authorization.py  test_concurrency.py  test_cvss.py  test_http_guard.py  test_models.py  test_passive_checks.py  test_resume.py  test_scope.py  test_triage_and_report.py
