[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ava-assessor"
version = "0.1.0"
description = "AVA — Authorized Vulnerability Assessor: an authorized-only web vulnerability assessment pipeline."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["security", "appsec", "vulnerability-assessment", "owasp", "pentest"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "PyYAML>=6.0.1",
    "playwright>=1.44.0",
    "sslyze>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=6.2", "ruff>=0.4"]

[project.scripts]
ava = "assess:main"

[project.urls]
Homepage = "https://github.com/mdAqibb/AVA"
Issues = "https://github.com/mdAqibb/AVA/issues"

[tool.setuptools]
py-modules = ["assess"]

[tool.setuptools.packages.find]
include = ["ava*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
